[package]
name = "geometry"
version = "0.1.0"
authors = ["nathanfaucett <nathanfaucett@gmail.com>"]

keywords = ["geometry"]
description = "geometry data structure"
license = "MIT"
readme = "README.md"
repository = "https://github.com/nathanfaucett/rs-geometry.git"
homepage = "https://github.com/nathanfaucett/rs-geometry"

[dependencies.hash_map]
git = "https://github.com/nathanfaucett/rs-hash_map.git"
[dependencies.insert]
git = "https://github.com/nathanfaucett/rs-insert.git"

[dependencies.shared]
git = "https://github.com/nathanfaucett/rs-shared.git"
